fix spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -159,6 +159,16 @@ body {
         display: flex;
         justify-content: center;
     }
+
+    .resume-card {
+        flex-direction: column-reverse !important;
+        text-align: left !important;
+        width: 60vw !important;
+    }
+
+    .resume-card img {
+        max-height: min-content !important;
+    }
 }
 
 #main-nav {
@@ -559,7 +569,7 @@ tr:nth-child(even) {
 }
 
 .resume-card {
-    margin: 3vh 6vw;
+    margin: 3vh auto;
     padding: 2vh;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -587,6 +597,7 @@ tr:nth-child(even) {
 
 .resume-container {
     background-color: var(--background);
+    width: 92vw;
 }
 
 .resume-card:nth-child(odd) {
@@ -611,6 +622,7 @@ tr:nth-child(even) {
 .resume-nav {
     text-align: center;
     margin-bottom: 5vh;
+    width: 92vw;
 }
 
 .resume-nav a, .button {
